1. fix layout for menu 2. QUALITY NEEDS QUALITY TIME color change as per design 3. fix alignment for quality section text 4. fix padding for idea and insights 5. removed footer animation arrow 6. changes images as per design for brands

--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -33,6 +33,8 @@
   color: #ab7d23;
 }
 .brand-image {
+  height: 173px !important;
+  width: 160px !important;
   transform: translateX(-30px);
   transition: all ease-in 0.5s;
 }
@@ -108,17 +110,27 @@
   transition: all ease-in 1s;
 }
 .main-heading > * {
+  
   color: #ab7d23;
 }
 .main-heading {
-  margin-top: 10rem;
+  margin-top: 12rem;
 }
+.main-heading h6 {
+  font-family: 'Proxima Nova Bold';
+ margin-bottom: 0px
+}
+.main-heading h3 {
+  font-size: 28px
+  /* margin-bottom: 0px */
+ }
 .brand-row {
   margin-top: 5%;
 }
 .brand-text {
   margin-left: 0.5rem;
   margin-top: 2rem;
+  word-spacing: 4px;
   text-align: left;
   font-family: "Noto Serif", serif;
   color: #e6d2ac;
@@ -165,7 +177,7 @@ input[type="text"]:focus {
   position: absolute;
   height: 0vh;
 
-  left: 45%;
+  left: 49vw;
   width: 0.5px;
   bottom: 0;
   background: rgba(255, 255, 255, 0.616);
@@ -189,7 +201,7 @@ height: 0vh;
   position: absolute;
   height: 0vh;
   top: 0;
-  left: 45%;
+  left: 49vw;
   width: 0.5px;
   animation: fastline 1s;
   background: rgba(255, 255, 255, 0.616);
